Refactor: user roles logic change